--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,3 @@
-
 :root {
     --bg-color: #fdfcf8;
     --primary-color: #2f6f4e;
@@ -211,6 +210,9 @@ body {
     flex: 1;
     padding: 15px;
     background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .input-text {
@@ -220,6 +222,7 @@ body {
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 15px;
+    text-align: center;
 }
 
 /* Class Selection */
@@ -365,6 +368,7 @@ body {
         transform: translateX(400px);
         opacity: 0;
     }
+
     to {
         transform: translateX(0);
         opacity: 1;
@@ -376,6 +380,7 @@ body {
         transform: translateX(0);
         opacity: 1;
     }
+
     to {
         transform: translateX(400px);
         opacity: 0;
@@ -473,6 +478,7 @@ body {
     from {
         opacity: 0;
     }
+
     to {
         opacity: 1;
     }
